# fancylog

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CITATION.CFF  LICENSE  MANIFEST.in  README.md  example.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: test_and_deploy.yml
fancylog/: __init__.py  fancylog.py  sublog.py
fancylog/tools/: git.py
tests/tests/: test_DUMMY.py  test_benchmarks.py  test_deprecations.py  test_general.py  test_logging_header.py  test_sublog.py
tests/travis/: testing.sh
