[project]
name = "fancylog"
authors = [{name = "Adam Tyson", email= "code@adamltyson.com"}]
description = "Fancier logging in Python"
readme = "README.md"
requires-python = ">=3.9.0"
dynamic = ["version"]

license = {text = "BSD-3-Clause"}

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
]

dependencies = ["rich"]

[project.urls]
homepage = "https://github.com/neuroinformatics-unit/fancylog"
bug_tracker = "https://github.com/neuroinformatics-unit/fancylog/issues"
documentation = "https://github.com/neuroinformatics-unit/fancylog"
source_code = "https://github.com/neuroinformatics-unit/fancylog"
user_support = "https://github.com/neuroinformatics-unit/fancylog/issues"

[project.optional-dependencies]
dev = [
	"pytest",
	"pytest-cov",
	"coverage",
	"tox",
	"black",
   	"isort",
    "mypy",
	"pre-commit",
	"ruff",
 	"setuptools_scm",
]

git = ["gitpython"]

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["fancylog*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
addopts = "--cov=fancylog"

[tool.black]
target-version = ['py38', 'py39', 'py310', 'py311']
skip-string-normalization = false
line-length = 79
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | examples
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 79

[tool.setuptools_scm]

[tool.check-manifest]
ignore = [
  "*.yaml",
  ".bumpversion.cfg",
  "tox.ini",
  "tests/*",
  "tests/test_unit/*",
  "tests/test_integration/*",
  ".flake8"
]

[tool.ruff]
line-length = 79
exclude = ["__init__.py","build",".eggs"]


[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{39,310,311}
isolated_build = True

[gh-actions]
python =
    3.9: py39
    3.10: py310
    3.11: py311

[testenv]
extras =
    dev
commands =
    pytest -v --color=yes --cov=fancylog --cov-report=xml
"""