[project]
name = "fancylog"
authors = [{name = "Adam Tyson", email= "code@adamltyson.com"}]
description = "Fancier logging in Python"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]

license = {text = "BSD-3-Clause"}

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
]

dependencies = ["rich"]

[project.urls]
homepage = "https://github.com/neuroinformatics-unit/fancylog"
bug_tracker = "https://github.com/neuroinformatics-unit/fancylog/issues"
documentation = "https://github.com/neuroinformatics-unit/fancylog"
source_code = "https://github.com/neuroinformatics-unit/fancylog"
user_support = "https://github.com/neuroinformatics-unit/fancylog/issues"

[project.optional-dependencies]
dev = [
	"pytest",
	"pytest-cov",
	"coverage",
	"tox",
	"pre-commit",
 	"setuptools_scm",
]

git = ["gitpython"]

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["fancylog*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
addopts = "--cov=fancylog"

[tool.setuptools_scm]

[tool.check-manifest]
ignore = [
  "*.yaml",
  ".bumpversion.cfg",
  "tox.ini",
  "tests/*",
  "tests/test_unit/*",
  "tests/test_integration/*",
]

[tool.ruff]
line-length = 79
exclude = ["__init__.py", "build", ".eggs"]
fix = true

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules/
select = [
  "E",   # pycodestyle errors
  "F",   # Pyflakes
  "UP",  # pyupgrade
  "I",   # isort
  "B",   # flake8 bugbear
  "SIM", # flake8 simplify
  "C90", # McCabe complexity
]

[tool.ruff.format]
docstring-code-format = true # Also format code in docstrings


[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{311,312,313}
isolated_build = True

[gh-actions]
python =
    3.11: py311
    3.12: py312
    3.13: py313


[testenv]
extras =
    dev
commands =
    pytest -v --color=yes --cov=fancylog --cov-report=xml
"""
